--- a/css/style.css
+++ b/css/style.css
@@ -20,4 +20,9 @@ h1{
     font-size: 60px;
     color: white
 }
+title{
+    color: white;
+    font-family:'Lucida Sans', 'Lucida Sans Regular';
+    font-size: 60px;
+}
 
